--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 	<h1>
 		경기도 의회 영문
-		<div class="git"><a href="https://github.com/aldo814/jababa" target="_blank">GitHub 페이지 바로가기</a></div>
+		<div class="git"><a href="https://github.com/aldo814/gyeonggi-assembly-en" target="_blank">GitHub 페이지 바로가기</a></div>
 	</h1>
 	<table class="tbl_list">
 	<thead>
