--- a/index.html
+++ b/index.html
@@ -24,8 +24,31 @@
 	<tbody>
 		<tr>
 			<td></td>
+			<td>페이지</td>
+			<td>
+				<a href="html/04.외국어/index.html">메인</a>
+			</td>
+		</tr>
+		<tr>
 			<td></td>
+			<td>페이지</td>
+			<td>
+				<a href="html/04.외국어/1-1.greetings.html">greetings</a>
+			</td>
+		</tr>
+		<tr>
 			<td></td>
+			<td>페이지</td>
+			<td>
+				<a href="html/04.외국어/"></a>
+			</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td>페이지</td>
+			<td>
+				<a href="html/04.외국어/"></a>
+			</td>
 		</tr>
 	</tbody>
 	</table>
